--- a/css/index.css
+++ b/css/index.css
@@ -15,14 +15,33 @@
 
 .col-top--header{
     background-color:#02aeb0;
+    
 }
 .col-top--content{
-    margin-top:20%;
+    margin-top:19%;
     margin-left:10%;
-    font-size: 100px;
+
 }
 h1{
     font-size:50px;
+}
+.mangxahoi-link{
+    margin-left: 5px;
+}
+.mangxahoi{
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-top: 15px;
+}
+.btn{
+    margin-left: 5px;
+}
+
+.music-duchomaivesau{
+    margin-top: 10px;
+    margin-right:20px;
+    margin-left:8px;
+    border-radius:10px;
 }
 .col-top--footer{
   
