--- a/css/index.css
+++ b/css/index.css
@@ -1,60 +1,127 @@
-
+body{
+    background-image:url(/img/BG/Ghostblade\ kị\ sĩ.jpg); 
+    background-size:100%;
+    height:auto;
+    background-repeat:no-repeat;
+}
 .container-fluid{
     width:100%;
     height:auto;
     padding:0px;
-
+    
+}
+.container{
+    border-radius: 10px;
+    background-color: rgba(128, 192, 211, 0.63);
+    background-size:100%;
+    height:800px;
+    margin-top:100px;
+}
+.dropdown-menu{
+    background-color: rgba(165, 174, 177, 0);
+    border:0px;
+    
+}
+.nav a{
+    margin-top: 13px;
+    font-size:17px;
+}
+.dropdown-item{
+    color:aliceblue;
 }
 .nav-link{
     color:aliceblue;
 }
-.container-top--header{
+.row-mid{
+    margin-left:100px;
     
-    height:auto;
+    padding:100px;
 }
-
-.col-top--header{
-    background-color:#02aeb0;
-    
-}
-.col-top--content{
-    margin-top:19%;
-    margin-left:10%;
-
+.col-mid{
+    margin-top: 23%;
 }
 h1{
-    font-size:50px;
-}
-.mangxahoi-link{
-    margin-left: 5px;
-}
-.mangxahoi{
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-top: 15px;
-}
-.btn{
-    margin-left: 5px;
+    font-size:48px;
+    color:white;
 }
 
-.music-duchomaivesau{
-    margin-top: 10px;
-    margin-right:20px;
-    margin-left:8px;
-    border-radius:10px;
+.socialnetwork{
+    margin-left:15px;
 }
-.col-top--footer{
-  
-    text-align:center;
-    height:200px;
-    color:aliceblue;
-    padding-top:40px;
-}
-.row-content{
-    display:flex;
-}
-.col-content{
-    min-height:1000px;
+.row-bottom{
+    text-align: center;
+    margin-top: 15%;
 }
 
-
+/* 16 */
+.btn-16 {
+    border: none;
+    color: #000;
+    }
+    .btn-16:after {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 100%;
+    top: 0;
+    left: 0;
+    direction: rtl;
+    z-index: -1;
+    box-shadow:
+    -7px -7px 20px 0px #fff9,
+    -4px -4px 5px 0px #fff9,
+    7px 7px 20px 0px #0002,
+    4px 4px 5px 0px #0001;
+    transition: all 0.3s ease;
+    }
+    .btn-16:hover {
+    color: #000;
+    }
+    .btn-16:hover:after {
+    left: auto;
+    right: 0;
+    width: 100%;
+    }
+    .btn-16:active {
+    top: 2px;
+    }
+    .frame {
+        width: 90%;
+        text-align: center;
+        float:left;
+        display:inline-flex;
+        text-decoration: none;
+        margin-top: 20px;
+    }
+    .dropdown-item{
+        margin-top: 5px;
+    }
+    .custom-btn {
+        
+        width: 130px;
+        height: 40px;
+        color: #fff;
+        border-radius: 5px;
+        margin-left: 10px;
+        font-family: 'Lato', sans-serif;
+        font-weight: 500;
+        background: transparent;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        position: relative;
+        display: inline-block;
+        box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+        7px 7px 20px 0px rgba(0,0,0,.1),
+        4px 4px 5px 0px rgba(0,0,0,.1);
+        outline: none;
+    }
+    
+    .dropdown-toggle:hover {
+        color: #000;
+        }
+        .btn-16:hover:after {
+        left: auto;
+        right: 0;
+        width: 100%;
+        }
+    
