--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,28 @@
 body{
     background-image:url(/img/BG/Ghostblade\ kị\ sĩ.jpg); 
-    background-size:100%;
+    background-size:auto;
     height:auto;
     background-repeat:no-repeat;
 }
 .container-fluid{
-    width:100%;
+    width:auto;
     height:auto;
-    padding:0px;
+    padding:2%;
     
 }
 .container{
     border-radius: 10px;
     background-color: rgba(128, 192, 211, 0.63);
-    background-size:100%;
-    height:800px;
-    margin-top:100px;
+    margin-top:5%;
+    
 }
 .dropdown-menu{
     background-color: rgba(165, 174, 177, 0);
     border:0px;
     
+}
+.dropdown:hover .dropdown-menu{
+    display:block;
 }
 .nav a{
     margin-top: 13px;
@@ -38,19 +40,22 @@ body{
     padding:100px;
 }
 .col-mid{
-    margin-top: 23%;
+    margin-top: 30%;
 }
 h1{
-    font-size:48px;
+    font-size:230%;
     color:white;
 }
-
+.socialnetworks{
+    height:40px;
+}
 .socialnetwork{
-    margin-left:15px;
+    margin-left:1%;
 }
 .row-bottom{
     text-align: center;
-    margin-top: 15%;
+    margin-top: 10%;
+    
 }
 
 /* 16 */
