--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,10 @@
 body{
     background-image:url(/img/BG/Ghostblade\ kị\ sĩ.jpg); 
-    background-size:auto;
+    background-size:100% auto;
+    
     height:auto;
     background-repeat:no-repeat;
+    background-position: 20%;
 }
 .container-fluid{
     width:auto;
@@ -13,7 +15,7 @@ body{
 .container{
     border-radius: 10px;
     background-color: rgba(128, 192, 211, 0.63);
-    margin-top:5%;
+    margin-top:3%;
     
 }
 .dropdown-menu{
@@ -24,26 +26,32 @@ body{
 .dropdown:hover .dropdown-menu{
     display:block;
 }
-.nav a{
-    margin-top: 13px;
-    font-size:17px;
+.col-top{
+    width:20%;
 }
+/* .nav a{
+    margin-top: 100px;
+    font-size:17px;
+} */
 .dropdown-item{
     color:aliceblue;
+    
 }
+
 .nav-link{
     color:aliceblue;
+    margin-left: 3%;
+    margin-right: 3%;
 }
 .row-mid{
-    margin-left:100px;
-    
-    padding:100px;
+    margin-left:5%;
+    padding:5% 10% 5% 10%;
 }
 .col-mid{
     margin-top: 30%;
 }
 h1{
-    font-size:230%;
+    font-size:220%;
     color:white;
 }
 .socialnetworks{
@@ -91,23 +99,29 @@ h1{
     top: 2px;
     }
     .frame {
-        width: 90%;
+        width: 100%;
         text-align: center;
-        float:left;
+        
         display:inline-flex;
         text-decoration: none;
-        margin-top: 20px;
+        margin-top: 7%;
+        
     }
     .dropdown-item{
         margin-top: 5px;
     }
+    .dropdown-toggle{
+        padding-top:1px;
+        padding-left: 2px;
+    }
     .custom-btn {
         
-        width: 130px;
+        width: auto;
         height: 40px;
         color: #fff;
         border-radius: 5px;
-        margin-left: 10px;
+        
+        padding:8px;
         font-family: 'Lato', sans-serif;
         font-weight: 500;
         background: transparent;
