--- a/css/index.css
+++ b/css/index.css
@@ -28,10 +28,19 @@ body{
 .col-top{
     width:20%;
 }
+.iamhungOielts {
+    display:flex;
+}
+.sniper_top{
+    margin-top: 4px;
+    width:15px;
+    height:15px;
+}
 /* .nav a{
     margin-top: 100px;
     font-size:17px;
 } */
+
 .dropdown-item{
     color:aliceblue;
     
@@ -39,9 +48,10 @@ body{
 
 .nav-link{
     color:aliceblue;
-    margin-left: 3%;
-    margin-right: 3%;
+    margin:0 3%;
+    
 }
+
 .row-mid{
     margin-left:5%;
     padding:5% 10% 5% 10%;
@@ -144,5 +154,5 @@ footer{
         left: auto;
         right: 0;
         width: 100%;
-        }
+    }
     
