--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 body{
     background-image:url(/img/BG/Ghostblade\ kị\ sĩ.jpg); 
     background-size: cover;
+    width:100%;
+    height:100vh;
     background-repeat:no-repeat;
     background-position: 20%;
     background-attachment: fixed;
