--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url(/img/BG/Ghostblade\ kị\ sĩ.jpg); 
+    background-image:url(/img/img_index/Ghostblade\ kị\ sĩ.jpg); 
     background-size: cover;
     width:100%;
     height:100vh;
@@ -7,6 +7,7 @@ body{
     background-position: 20%;
     background-attachment: fixed;
 }
+
 .container-fluid{
     width:auto;
     height:auto;
@@ -68,18 +69,22 @@ h1{
 .socialnetworks{
     height:40px;
 }
-.socialnetwork{
-    margin-left:1%;
-}
+
 .row-bottom{
     text-align: center;
     margin-top: 13%;
     
 }
-footer{
+/* footer{
     
     text-align: center;
+} */
+.socialnetwork{
+    margin-left:1%;
+    transition:0.5s;
+
 }
+
 /* 16 */
 .btn-16 {
     border: none;
