--- a/css/starbucks.css
+++ b/css/starbucks.css
@@ -161,7 +161,7 @@ header ul li a {
         width:30px;
         height:30px;
         cursor:pointer;
-        background: url(/img/menu.png) ;
+        background: url(/img/img_starbucks/menu.png);
         background-size: 30px;
         background-position: center;
         background-repeat: no-repeat;
@@ -169,11 +169,10 @@ header ul li a {
         z-index: 11;
 
     }
-    .togge.active {
+    .toggle.active {
         position:fixed;
         right:20px;
-        
-        background: url(/img/close.png) ;
+        background: url(/img/img_starbucks/close.png);
         background-size: 25px;
         background-position: center;
         background-repeat: no-repeat;
