--- a/css/index.css
+++ b/css/index.css
@@ -23,10 +23,10 @@ body{
 .dropdown-menu{
     background-color: rgba(165, 174, 177, 0);
     border:0px;
-    
 }
 .dropdown:hover .dropdown-menu{
     display:block;
+
 }
 .col-top{
     width:20%;
@@ -46,7 +46,8 @@ body{
 
 .dropdown-item{
     color:aliceblue;
-    
+    filter: drop-shadow(-1px 6px 3px rgba(66, 66, 66, 0));
+
 }
 
 .nav-link{
@@ -99,11 +100,14 @@ h1{
     left: 0;
     direction: rtl;
     z-index: -1;
+    
+    /* filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5)); */
+
     box-shadow:
-    -7px -7px 20px 0px #fff9,
-    -4px -4px 5px 0px #fff9,
-    7px 7px 20px 0px #0002,
-    4px 4px 5px 0px #0001;
+    -7px -7px 20px 0px rgba(230, 230, 230, 0.281),
+    -4px -4px 5px 0px rgba(192, 192, 192, 0.13),
+    7px 7px 20px 0px rgba(0, 0, 0, 0.267),
+    4px 4px 5px 0px rgba(250, 250, 250, 0.192);
     transition: all 0.3s ease;
     }
     .btn-16:hover {
